<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kinvey.sample.micflow.MainActivity" >

    <TextView
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world"
        android:textSize="16sp" />

    <Button
        android:id="@+id/loginpage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_status"
        android:layout_marginTop="20dp"
        android:text="@string/login_with_login_page"
        android:textSize="16sp" />

    <Button
        android:id="@+id/kinvey_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginpage"
        android:layout_marginTop="20dp"
        android:text="@string/kinvey_login"
        android:textSize="16sp" />

    <Button
        android:id="@+id/automated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/kinvey_login"
        android:layout_marginTop="20dp"
        android:text="@string/login_with_automated_flow"
        android:textSize="16sp" />

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/automated"
        android:layout_marginTop="20dp"
        android:text="@string/logout"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/login_errors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logout"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_world"
        android:textSize="16sp" />


</RelativeLayout>